--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ allprojects {
         box2DLightsVersion = '1.3'
         ashleyVersion = '1.3.1'
         aiVersion = '1.4.0'
+        lombokVersion = '1.14.8'
+        artemisVersion = '0.7.1'
     }
 
     repositories {
@@ -47,6 +49,8 @@ project(":core") {
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        compile "org.projectlombok:lombok:$lombokVersion"
+		compile "net.onedaybeard.artemis:artemis-odb:$artemisVersion"
     }
 }
 
